# telepy

./: .clang-format  .codecov.yml  .coveragerc  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
src/telepy/: __init__.py  __main__.py  _gc_stats.pyi  _telepysys.pyi  chrome_trace_converter.py  commands.py  config.py  environment.py  flamegraph.py  gc_analyzer.py  jupyter.py  logger.py  logging.py  monitor.py  sampler.py  script.js  server.py  shell.py  system.py  thread.py
src/telepy/telepysys/: Makefile  compat.h  gc_stats.c  htime.c  htime.h  inject.h  list.h  telepysys.c  telepysys.h  tree.cc  tree.h
src/telex/: __init__.py  __main__.py  _gc_stats.pyi  _telexsys.pyi  chrome_trace_converter.py  commands.py  config.py  environment.py  flamegraph.py  gc_analyzer.py  jupyter.py  monitor.py  sampler.py  script.js  server.py  shell.py  system.py  thread.py
src/telex/telepysys/: Makefile  telepysys.h
src/telex/telexsys/: Makefile  compat.h  gc_stats.c  inject.c  telexsys.c  telexsys.h  tree.cc  tree.h
tests/: base.py  test_chrome_trace_cli.py  test_chrome_trace_converter.py  test_command.py  test_completer.py  test_config.py  test_config_command.py  test_focus_mode.py  test_gc_analyzer.py  test_middlewares.py  test_monitor.py  test_profiler.py  test_sampler.py  test_server.py  test_shell.py  test_telesys.py
tests/test_files/: test_fib.py  test_fib_fork.py  test_focus_and_regex.py  test_fork_multi_processes.py  test_forkserver.py  test_multi_thread_regex.py  test_spawn.py  test_spawn_multi_processes.py  test_torch.py  trace.json
