[project]
name = "telepy"
version = "0.1.0"
description = "A Python diagnostic tool."
authors = [{ name = "changlehung", email = "changlehung@gmail.com" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: System :: Logging",
]
license-files = ["LICENSE"]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# code settings
[tool.ruff]
select = ["E", "F", "W", "I", "UP", "RUF"]
line-length = 90
target-version = "py313"
fix = false

[tool.setuptools.dynamic]
version = { attr = "telepy.__version__" }
